add contact section - add contact info, add map, add footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100..800&family=Playwrite+BE+VLG:wght@100..400&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100..800&family=Noto+Sans+SC:wght@100..900&family=Playwrite+BE+VLG:wght@100..400&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anek+Telugu:wght@100..800&family=Noto+Sans+SC:wght@100..900&family=Playwrite+BE+VLG:wght@100..400&family=Roboto:wght@300&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    
+    <style>
+      #menuLink {
+        scroll-margin-top: 300px;
+      }
+
+      #contactLink {
+        scroll-margin-top: 150px;
+      }
+    </style>
+
     <title>Kavárna Stará škola</title>
   </head>
   <body>
